# RingCT-SP23

./: Cargo.toml  README.md
bulletproofs/: Cargo.toml
bulletproofs/src/: ipa.rs  lib.rs  structs.rs
ringsignature/: Cargo.toml
ringsignature/src/: errors.rs  lib.rs
ringsignature/src/bulletproofs/: merlin.rs  mod.rs  pedersen.rs  schnorr.rs
ringsignature/src/commitment/: mod.rs  pedersen.rs  structs.rs
ringsignature/src/ringsig/: mod.rs  protocol.rs  protocol_compressed.rs  protocol_compressed_modification.rs  protocol_linear.rs  structs.rs
ringsignature/src/schnorr/: constraint.rs  mod.rs  pedersen.rs  protocol.rs  prover.rs  structs.rs  transcript.rs
ringsignature/src/sigma/: mod.rs  transcript.rs
ringsignature/src/utils/: vec.rs
toolbox/: Cargo.toml
toolbox/src/: lib.rs  vec.rs
toolbox/src/sigma/: transcript.rs
utils/: Cargo.toml
utils/src/: errors.rs  vec.rs
utils/src/sigma/: mod.rs
