[package]
name = "ringsignature"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-secp256k1 = "0.4.0"
ark-serialize = "0.5.0"
ark-std = "0.4.0"
displaydoc = "0.2.5"
light-poseidon = "0.2.0"
merlin = "3.0.0"
sha256 = "1.5.0"
thiserror = "2.0.8"

# import for poly_iop & transcript
transcript = {git="https://github.com/EspressoSystems/hyperplonk"}
derivative = "2.2.0"
