[package]
name = "ringsignature"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-secp256k1 = "0.4.0"
ark-std = { version = "0.4.0", features = ["print-trace"]}
merlin = "3.0.0"
sha256 = "1.5.0"
rand = "0.8.5"

bulletproofs = {path = "../bulletproofs"}
toolbox = {path = "../toolbox"}

#[features]
#print-trace = [
#    "ark-std/print-trace",
#]
