[package]
name = "toolbox"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-secp256k1 = "0.4.0"
ark-std = { version = "0.4.0", features = ["print-trace"]}
rand = "0.8.5"
merlin = "3.0.0"
ark-serialize =  { version = "^0.4.0", default-features = false }
displaydoc = "0.2.5"